TestRepo2/src/objects/Program__c.object
<CustomObject>
    <description>POS Project: object that represents a set of events for which related catalog items are offered to shoppers (distributors and internal Diageo employees)</description>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Magento_Id__c</fullName>
        <externalId>true</externalId>
        <label>Magento Category Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Window_Close_Date__c</fullName>
        <formula>Order_Window__r.Order_Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Window Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Window_Start_Date__c</fullName>
        <formula>Order_Window__r.Order_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Window Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Window_Status__c</fullName>
        <formula>TEXT(Order_Window__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Window Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Window__c</fullName>
        <label>Order Window</label>
        <referenceTo>Order_Window__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <label>Program Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <displayFormat>PRG-{000000}</displayFormat>
        <label>Program ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sales_Channel_Group__c</fullName>
        <label>Sales Channel Group</label>
        <picklist>
            <picklistValues>
                <fullName>Execution Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multicultural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sales_Driver__c</fullName>
        <label>Sales Driver</label>
        <picklist>
            <picklistValues>
                <fullName>INP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display/Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainovation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>AMJ_F13_WBS_View</fullName>
        <columns>NAME</columns>
        <columns>Program_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Window__c</field>
            <operation>equals</operation>
            <value>AMJ F13 Quarterly Ordering</value>
        </filters>
        <label>AMJ F13 WBS View</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Magento_Id__c</columns>
        <columns>Order_Window__c</columns>
        <columns>Order_Window_Status__c</columns>
        <columns>Brand__c</columns>
        <columns>Sales_Channel_Group__c</columns>
        <columns>Calendar__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JAS_F14_WBS_View</fullName>
        <columns>NAME</columns>
        <columns>Program_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Window__c</field>
            <operation>equals</operation>
            <value>SPIRITS JAS F14 Quarterly Ordering</value>
        </filters>
        <label>JAS F14 WBS View</label>
    </listViews>
    <listViews>
        <fullName>No_Program_Code_WBS_View</fullName>
        <columns>Order_Window__c</columns>
        <columns>NAME</columns>
        <columns>Program_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
        </filters>
        <label>No Program Code WBS View</label>
    </listViews>
    <listViews>
        <fullName>November_F13_WBS_View</fullName>
        <columns>NAME</columns>
        <columns>Program_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Window__c</field>
            <operation>equals</operation>
            <value>November Monthly Portal - H2 F&apos;13</value>
        </filters>
        <label>November  F13 WBS View</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IZ00000000IQkMAM_00NZ0000000I1VeMAK</fullName>
        <active>true</active>
        <errorMessage>It is not possible to create or edit an Item if the related Program&apos;s Order Window is new, completed or archived</errorMessage>
        <field>Item__c.Program__c</field>
        <filterItems>
            <field>Program__c.Order_Window__r.Status__c</field>
            <operation>notEqual</operation>
            <value>New, Completed, Archived</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Item_Program</name>
    </namedFilters>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>